# phenotype-ops

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  deny.toml  justfile
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  governance_change.md
.github/workflows/: ci.yml  deploy-review-surface.yml  full-ci.yml  manifest-gate.yml  pin-gate.yml  secret-scan.yml
agent-devops-setups/: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ADR.md  AGENTS.md  CHANGELOG.md  Dockerfile  FUNCTIONAL_REQUIREMENTS.md  LICENSE  PLAN.md  PRD.md  README.md  SECURITY.md  SPEC.md  TEST_COVERAGE_MATRIX.md  Taskfile.yml  codecov.yml  justfile  process-compose.yml
agent-devops-setups/.agileplus/: worklog.md
agent-devops-setups/.github/: pull_request_template.md
agent-devops-setups/.github/scripts/: security-guard.sh
agent-devops-setups/.github/workflows/: benchmark.yml  ci.yml  policy-gate.yml  release.yml  security-guard.yml  security.yml  validate-policy.yml
agent-devops-setups/docs/: 01_RESEARCH.md  04_OPERATION_LOG.md  PLAN.md  architecture.md  package-lock.json  package.json  scope-map.md
agent-devops-setups/docs/.vitepress/: config.mts  site-meta.mjs
agent-devops-setups/docs/agent-policy/: effective-policy.json  sources.json
agent-devops-setups/docs/fa/: index.md
agent-devops-setups/docs/fa-Latn/: index.md
agent-devops-setups/docs/journeys/: index.md  quick-start.md
agent-devops-setups/docs/playwright-report/: index.html
agent-devops-setups/docs/stories/: hello-world.md
agent-devops-setups/llama-cpp/: Dockerfile  README.md  docker-compose.yml
agent-devops-setups/schemas/: extension-manifest.schema.json  policy-resolution.schema.json
agent-devops-setups/scripts/: repo-devops-checker.sh  repo-push-fallback.sh
agent-devops-setups/tools/: audit_policy_rotation.py  build_pr_package.py  federate_policy.py  matrix_onboard.sh  onboard_repos.sh  sync_policy.sh  validate_policy_payload.py
governance/: AGENTS.base.md  CLAUDE.base.md  PRE-PUSH-MANIFEST.md  RAINBOW-MODEL.md  SETUP-RULESETS.sh  lefthook.yml
pillars/: compliance.yml  docs.yml  perf.yml  quality.yml  security.yml
policies/: manifest-schema.json  pillar-schema.json
review-surface/: .env.example  config.yaml  main.py  requirements.txt
templates/: codespell-ignore.txt  deny.toml
tools/phenotype-manifest/: Cargo.toml
tools/phenotype-manifest/src/: cli.rs  config.rs  crypto.rs  generate.rs  lib.rs  main.rs  manifest.rs  pillar.rs  schema.rs  verify.rs
tools/phenotype-pin/: README.md  phenotype-pin.py
(+24 files in other folders)
