[package]
name = "phenotype-manifest"
version = "0.1.0"
edition = "2021"
description = "Attestation manifest generator and validator for Phenotype fleet"
license = "MIT OR Apache-2.0"
repository = "https://github.com/phenotype/phenotype-ops"
readme = "README.md"
categories = ["command-line-utilities", "development-tools", "security"]
keywords = ["attestation", "manifest", "ci", "gitops", "supply-chain"]

[workspace]

[dependencies]
clap = { version = "4.5", features = ["derive", "env", "std"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519-dalek = "2.0"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
pem = "1.0"
rand = "0.8"
git2 = "0.18"
chrono = { version = "0.4", features = ["serde"] }
jsonschema = { version = "0.21", default-features = false, features = ["draft202012", "resolve-file"] }
walkdir = "2.0"
regex = "1.10"
indicatif = "0.17"
console = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.0"
predicates = "3.0"

[[bin]]
name = "phenotype-manifest"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
